// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SubscribeModal renders compact button when compact is true 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  background: transparent;
  cursor: pointer;
  border: 1px solid #FBFBFB;
  padding: 15px 20px;
  font-size: 0.9rem;
  transition: opacity 0.15s,border-color 0.15s,color 0.15s;
}

.c0:hover:not(:disabled) {
  opacity: 0.8;
}

.c0:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c0:focus-visible {
  outline: #FBFBFB auto 1px;
}

.c1 {
  transition: background-color 0.15s ease,color 0.15s ease;
  font-size: 0.75rem;
  padding: 0.3rem 0.75rem;
}

.c1:hover:not(:disabled) {
  background-color: #FBFBFB;
  color: #000000;
}

<body>
  <div>
    <button
      aria-label="Subscribe to blog"
      class="c0 c1"
    >
      Subscribe
    </button>
  </div>
</body>
`;

exports[`SubscribeModal renders trigger button 1`] = `
.c0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  background: transparent;
  cursor: pointer;
  border: 1px solid #FBFBFB;
  padding: 15px 20px;
  font-size: 0.9rem;
  transition: opacity 0.15s,border-color 0.15s,color 0.15s;
}

.c0:hover:not(:disabled) {
  opacity: 0.8;
}

.c0:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c0:focus-visible {
  outline: #FBFBFB auto 1px;
}

.c1 {
  transition: background-color 0.15s ease,color 0.15s ease;
}

.c1:hover:not(:disabled) {
  background-color: #FBFBFB;
  color: #000000;
}

<body>
  <div>
    <button
      aria-label="Subscribe to blog"
      class="c0 c1"
    >
      Subscribe
    </button>
  </div>
</body>
`;
